scripts/nullness/annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8.txt
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/Move.java:15: error: [initialization.field.uninitialized] the default constructor does not initialize field curPos
    protected Position curPos;
                       ^
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/Move.java:66: error: [dereference.of.nullable] dereference of possibly-null reference lastMovedDistance
        for (int i = 0; i < lastMovedDistance.number+1; i++) {
                            ^
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/Exp.java:28: error: [return] incompatible types in return.
        return result;
               ^
  type of expression: @Initialized @Nullable Numbers
  method return type: @Initialized @NonNull Numbers
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/Numbers.java:44: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Numbers
    @Initialized @NonNull boolean equals(@Initialized @NonNull Numbers this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Position.java:117: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Position
    @Initialized @NonNull boolean equals(@Initialized @NonNull Position this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/VarDecl.java:40: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull VarDecl
    @Initialized @NonNull boolean equals(@Initialized @NonNull VarDecl this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/Identifier.java:43: error: [override.param] Incompatible parameter type for o.
    public boolean equals(Object o) {
                                 ^
  found   : @Initialized @NonNull Object
  required: @Initialized @Nullable Object
  Consequence: method in @Initialized @NonNull Identifier
    @Initialized @NonNull boolean equals(@Initialized @NonNull Identifier this, @Initialized @NonNull Object p0)
  cannot override method in @Initialized @NonNull Object
    @Initialized @NonNull boolean equals(@Initialized @NonNull Object this, @Initialized @Nullable Object p0)
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/statements/IfThenElse.java:19: error: [initialization.fields.uninitialized] the constructor does not initialize fields: elseStmtList
    public IfThenElse(BooleanExp boolE, Stmt[] ifStmtList) {
           ^
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/BooleanExp.java:20: error: [method.invocation] call to interpret() not allowed on the given receiver.
        interpret();
                 ^
  found   : @UnderInitialization(expressions.BooleanExp.class) @NonNull BooleanExp
  required: @Initialized @NonNull BooleanExp
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/BooleanExp.java:50: error: [unboxing.of.nullable] unboxing a possibly-null reference result
       return result;
              ^
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Grid.java:24: error: [method.invocation] call to setSizeGlobal(statements.Size) not allowed on the given receiver.
        setSizeGlobal(sizeIns);
                     ^
  found   : @UnderInitialization(util.Grid.class) @NonNull Grid
  required: @Initialized @NonNull Grid
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Program.java:52: error: [method.invocation] call to printWelcome() not allowed on the given receiver.
        printWelcome();
                    ^
  found   : @UnderInitialization(util.Program.class) @NonNull Program
  required: @Initialized @NonNull Program
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Program.java:55: error: [method.invocation] call to makePrettyPrint(java.lang.String) not allowed on the given receiver.
        makePrettyPrint(name);
                       ^
  found   : @UnderInitialization(util.Program.class) @NonNull Program
  required: @Initialized @NonNull Program
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/util/Robot.java:72: error: [return] incompatible types in return.
        return varDecls.get(ident);
                           ^
  type of expression: @Initialized @Nullable VarDecl
  method return type: @Initialized @NonNull VarDecl
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/exceptions/RobotOutOfGridException.java:11: error: [method.invocation] call to printStackTrace() not allowed on the given receiver.
        printStackTrace();
                       ^
  found   : @UnderInitialization(exceptions.RobotOutOfGridException.class) @NonNull Throwable
  required: @Initialized @NonNull Throwable
../annotator/url2892692420_mikaello_inf3110_oblig1_tgz-pJ8-inf3110_oblig1_Inf3110_oblig1J8/src/expressions/PlusExp.java:20: error: [method.invocation] call to interpret() not allowed on the given receiver.
        interpret();
                 ^
  found   : @UnderInitialization(expressions.PlusExp.class) @NonNull PlusExp
  required: @Initialized @NonNull PlusExp
16 errors
